After fork()ing we need to close the PTY master FD in the child. Otherwise closing/killing the Terminal will not automatically wake up children reading/writing the slave end. Fixes #3340 and probably #5395.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35584 a95241bf-73f2-0310-859d-f6bbb57e9c96